# LKRS

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: CI.yml  action.yml
.legacy/cmd/: psoBuild.cpp  psoQuery.cpp
.legacy/common/: triplet.hpp
.legacy/database/: database.cpp
.legacy/parser/: sparql_parser.cpp
.legacy/query/: sparql_query.cpp  sparql_query.hpp
data/: p1.sql  p2.sql  p3.sql
include/common/: result_set.hpp  triple.hpp  triplet.hpp  type.hpp  utils.hpp
include/database/: DBLoadException.hpp  database.hpp  database_builder.hpp
include/parser/: SPARQLParser.hpp  sparql_parser.hpp
include/query/: QueryPlan.hpp  SPARQLQuery.hpp  query_plan.hpp  sparql_query.hpp
include/query/legacy/: sparql_query.hpp
include/sparql-parser/: parser.hpp
include/triple/: triple.hpp
script/: build.sh
scripts/: build.bat  build.sh
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  psoBuild.cpp  psoHttp.cpp  psoQuery.cpp
src/common/: CMakeLists.txt  triple.cpp  triplet.cpp
src/database/: CMakeLists.txt  DBLoadException.cpp  database.cpp  database_builder.cpp
src/main/: CMakeLists.txt  build.cpp  psoBuild.cpp  psoQuery.cpp
src/parser/: CMakeLists.txt  SPARQLParser.cpp  sparql_parser.cpp  triple.cpp
src/parser/legacy/: sparql_parser.cpp
src/query/: CMakeLists.txt  QueryPlan.cpp  SPARQLQuery.cpp  _sparql_query.cpp  query_plan.cpp  sparql_query.cpp  sparql_query_legacy.cpp
src/tools/: CMakeLists.txt  load.cpp  query.cpp
test/: CMakeLists.txt  main.cpp  sparql_parser_test.cpp  sparql_parser_unittest.cpp  testParser.cpp
